--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="content">
-            
-        </div>
-        <div class="content">
-
-        </div>
-        <div class="content">
-
+        <h1>BEAUTIFUL MOUNTAINS</h1>
+        <div id="box">
+                <div class="content">
+                    <img class="image" src="./Images/Himalayas.jpg" alt="">
+                </div>
+                <div class="content">
+                    <img src="./Images/MountFuji.png" alt="" class="image">
+                </div>
+                <div class="content">
+                    <img src="./Images/Zhangjiajie.jpg" alt="" class="image">
+                </div>
         </div>
     </div>
 </body>
