main effect complete

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <div class="container">
         <h1>BEAUTIFUL MOUNTAINS</h1>
         <div id="box">
-                <div class="content">
-                    <img class="image" src="./Images/Himalayas.jpg" alt="">
+                <div class="content" >
+                    <img id="himalayas" class="image interactable" src="./Images/Himalayas.jpg" alt="">
                 </div>
                 <div class="content">
-                    <img src="./Images/MountFuji.png" alt="" class="image">
+                    <img id="fuji" src="./Images/MountFuji.png" alt="" class="image  interactable">
                 </div>
                 <div class="content">
-                    <img src="./Images/Zhangjiajie.jpg" alt="" class="image">
+                    <img id="zhangjiajie" src="./Images/Zhangjiajie.jpg" alt="" class="image  interactable">
                 </div>
         </div>
     </div>
+    <div id="cursor"></div>
 </body>
 </html>
