info box complete

--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
         </div>
     </div>
     <div id="cursor"></div>
+    <div id="cursor-content-text">
+        <div id="himalayas-text">
+            <p><span class="cursor-title">The Himalayas</span><br> The largest mountain range in the world, created from India's tectonic plate pushing against Eurasia for over 40 million years. As of January of 2023, 6338 people have climbed Mt Everest.</p>
+        </div>
+        <div id="fuji-text">
+            <p><span class="cursor-title">Mount Fuji</span><br> The largest and most predominant mountain in Japan is also an active Volcano that last erupted in the 18th century.</p>
+        </div>
+        <div id="zhangjiajie-text">
+            <p><span class="cursor-title">Zhangjiajie Forest</span> This mountain forest is China's first national park, founded in 1982 and only became an iconic landscape to the world when James Cameron's Avatar was released in 2009.</p>
+        </div>
+    </div>
 </body>
 </html>
